# motto-mcp-server

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  sentry_init.py  start_tunnel.cmd  update_tunnel_url.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_improvement.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: auto-merge-guard-test.sh  auto-merge.yaml  ci.yml  codeql.yml  deploy.yml  release.yml  set-grabber-env.yml
archived/: .gitkeep
docs/: README.md  deploy-and-connect.md  operations.md
mcp_server/: __init__.py  auth.py  chat_tools.py  cockpit.py  db.py  fleet_context.py  observability.py  server.py  tools_fleet_proxy.py  update_tunnel_url.py
mcp_server/handlers/: __init__.py  deepseek.py
mcp_server/migrations/: 0001_init.sql  0002_decisions_locks_artifacts.sql  0003_grabber_jobs.sql  0004_local_tasks.sql  0005_verify_and_capabilities.sql  0006_pending_moves_claimed_status.sql  0007_epics_extension.sql
mcp_server/routes/: __init__.py
mcp_server/templates/: __init__.py
mcp_server/tools/: __init__.py  epics.py  infra_sprawl.py
mcp_server/verifiers/: __init__.py  merge_pr.py  noop.py  types.py
scripts/: configure_sentry_alerts.py  smoke_test.py
servers/apollo/: __init__.py  __main__.py  server.py
servers/apollo/tests/: test_server.py
servers/cloudflare/: README.md  SKILL.md  __main__.py  server.py
servers/cloudflare/tests/: test_server.py
servers/doppler/: README.md  SKILL.md  __init__.py  server.py
servers/doppler/tests/: test_server.py
servers/github/: __init__.py  __main__.py  server.py
servers/github/tests/: test_server.py
servers/grabber/: README.md  SKILL.md  __init__.py  __main__.py  server.py
servers/grabber/tests/: test_server.py
servers/linear/: __init__.py  __main__.py  server.py
servers/linear/tests/: test_server.py
servers/northflank/: README.md  SKILL.md  __main__.py  server.py
servers/northflank/tests/: test_server.py
servers/supabase/: __init__.py  __main__.py  server.py
servers/supabase/tests/: test_server.py
tests/: conftest.py  test_claim_next_step.py  test_epics_cockpit.py  test_epics_integration.py  test_epics_worker_a.py  test_epics_worker_b.py  test_force_release_lock.py  test_get_decisions.py  test_get_locks.py  test_get_run.py  test_infra_sprawl.py  test_list_runs.py  test_local_longpoll.py  test_replay_run.py
tests/integration/: test_mcp_core.py
