[project]
name = "motto-mcp-server"
version = "3.3.0"
description = "FastMCP fleet-coordination server backed by Neon Postgres."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
doppler = [
    "httpx>=0.27",
]

[project.scripts]
motto-mcp-server = "mcp_server.server:main"
motto-doppler-mcp = "servers.doppler.server:main"
motto-grabber-mcp = "servers.grabber.server:main"
motto-cloudflare-mcp = "servers.cloudflare.server:main"
motto-northflank-mcp = "servers.northflank.server:main"
motto-github-mcp = "servers.github.server:main"
motto-linear-mcp = "servers.linear.server:main"
motto-apollo-mcp = "servers.apollo.server:main"
motto-supabase-mcp = "servers.supabase.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "servers"]

[tool.hatch.build.targets.wheel.force-include]
"mcp_server/migrations" = "mcp_server/migrations"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
